# altexo-desktop-app

./: .atom-build.yml  .clang-format  .gitignore  .hgignore  AlteXo.pro  CMakeLists.txt  LICENSE.md  README.md  WIN.md  al-ext-libs.pri  alcolor.cpp  alcolor.h  alfreenectdevice.cpp  alfreenectdevice.h  alglwidget.cpp  alglwidget.h  alkinectinterface.cpp  alkinectinterface.h  alrecorder.cpp  alrecorder.h  altexo.pro  alvideoappsrc.cpp  alvideoappsrc.h  alvideosurface.cpp  alvideosurface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recorder.cpp  recorder.h  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
ALTEXO_SDK/: CMakeLists.txt  al-ext-libs.pri  al_manager.pro  alvideocapturer.cpp  alvideocapturer.h  alvideocapturerthread.cpp  alvideocapturerthread.h  alvideorenderer.cpp  alvideorenderer.h
ALTEXO_SDK/conductor/: aldatamanager.h  conductor.cc  conductor.h  peer_connection_client.cc  peer_connection_client.h
ALTEXO_SDK/src/: almanager.h  almanagerinterface.cpp  alvideocapturer.cpp  alvideocapturerthread.cpp
ALTEXO_SDK/src/conductor/: aldatamanager.cpp  peer_connection_client.h
AlteXo/: .hgignore  AlteXo.pro  alkinectinterface.h  alrecorder.cpp  alrecorder.h  alsettingsdialog.cpp  alsettingsdialog.h  alsettingsdialog.ui  alvideoappsrc.cpp  alvideoappsrc.h  alvideosurface.cpp  alvideosurface.h  alwsclient.cpp  alwsclient.h  mac-deps.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  unix-deps.pri
al/: BUILD.gn
al/src/: main.cpp
al_conductor/: al_conductor.pro  almanager.cpp  almanager.cpp.autosave  almanager.h
al_core/: .clang-format  CMakeLists.txt
al_core/src/: al_core_export.h  manager.cpp  manager.hpp  scenerenderercb.hpp
al_fake_sensor/: .clang_complete  CMakeLists.txt
al_fake_sensor/src/: alkinectplugin.cpp  alkinectplugin.hpp
al_json_rpc_client/: CMakeLists.txt
al_json_rpc_client/src/: alconnclient.cpp  alconnclient.hpp  alrpc.cpp  alrpc.hpp  alrpcrequest.hpp  alwsclient.cpp  alwsclient.hpp  alwsplugin.cpp  alwsplugin.hpp  main.cpp
al_json_rpc_client/src/win32helpers/: gettimeofday.h
al_json_rpc_client_2/: CMakeLists.txt
al_json_rpc_client_2/src/: alconnclient.cpp  alrpc.cpp  alrpc.hpp  alrpcrequest.cpp  alwsclient.cpp  alwsclient.hpp  alwsplugin.cpp  alwsplugin.hpp
al_kinect/: .clang-format  CMakeLists.txt  kinect_source.pro  unix-deps.pri
al_kinect/src/: alfreenectdevice.cpp  alfreenectdevice.h  alkinectinterface.cpp  alkinectinterface.h  alkinectplugin.cpp  alkinectplugin.hpp
al_kinect_win/: CMakeLists.txt
al_kinect_win/src/: alkinectmanager.cpp  alkinectmanager.hpp  main.cpp
al_plugin_test/: .clang_complete  CMakeLists.txt
al_plugin_test/src/: alplugintest.cpp  alplugintest.hpp
al_realsense/: .clang_complete  CMakeLists.txt
al_realsense/src/: alrealsenseplugin.cpp  alrealsenseplugin.hpp
al_sdk/: .atom-build.yml  .clang_complete  CMakeLists.txt  al-ext-libs-win.pri  al-ext-libs.pri  al-webrtc-deps-mac.cmake  al-webrtc-deps-win.cmake  al-webrtc-deps.cmake  al_manager.pro
al_sdk/src/: alcallback.h  allocalvideorenderer.cpp  allocalvideorenderer.h  almanager.cpp  almanager.h  almanagerinterface.cpp  almanagerinterface.h  alsdkplugin.cpp  alsdkplugin.h  alsdkplugin.hpp  alvideocapturer.cpp  alvideocapturer.h  alvideocapturer0.cpp  alvideocapturerthread.cpp  alvideocapturerthread.h  alvideorenderer.cpp  alvideorenderer.h  customsocketserver.h
al_sdk/src/conductor/: aldatamanager.cpp  aldatamanager.h  conductor.cc  conductor.h  defaults.cc  peer_connection_client.cc
al_sdk_2_0/: .clang_complete  CMakeLists.txt  al-webrtc-deps.cmake
al_sdk_2_0/src/: alcallback.h  alconductor.cpp  alconductor.hpp  almanager.cpp  alsdk.cpp  alsdk.hpp  alsdkplugin.cpp  alsdkplugin.hpp  alvideocapturer.cpp  alvideorenderer.cpp  customsocketserver.h
al_sdk_2_0/src/conductor/: aldatamanager.h  conductor.cc  conductor.h
al_sdk_tester_3/: CMakeLists.txt
al_sdk_tester_3/src/: main.cc
al_sdk_testlib/: .clang_complete  CMakeLists.txt
al_sdk_testlib/src/: my_plugin.cc
al_ui/: .clang_complete  CMakeLists.txt  main.cpp
al_ui/include/: res_path.h
al_ui/shaders/: holoPlane.frag  holoPlane.vert  hologramRenderer.frag  hologramRenderer.vert  sensorCompose.frag  sensorCompose.vert  shader.frag  shader.vert  videoStreamRenderer.frag  videoStreamRenderer.vert  worldCoordinates.frag  worldCoordinates.vert
al_ui/src/: GLSLShader.cpp  GLSLShader.hpp  Plane.cpp  Plane.h  abstractcamera.cpp  abstractcamera.h  hologramrenderer.cpp  hologramrenderer.hpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl_gl3.cpp  main.cpp  manager.cpp  manager.hpp  remoteframerenderer.cpp  remoteframerenderer.hpp  scenerenderer.cpp  scenerenderer.hpp  sensordatafborenderer.cpp  sensordatafborenderer.hpp  targetcamera.cpp  targetcamera.h  videostreamrenderer.cpp  videostreamrenderer.hpp
al_ui/src/glelements/: bottomplane.cpp  bottomplane.hpp  hologram.cpp  hologram.hpp  hologramtest.cpp  hologramtest.hpp  worldcoordinate.cpp  worldcoordinate.hpp
al_ui/src/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  stb_rect_pack.h  stb_textedit.h  stb_truetype.h
al_ui/src/ui/: mainwindow.cpp  mainwindow.hpp
al_utils/: .clang_complete  CMakeLists.txt
al_utils/src/: al_utils_export.h  allogger.cpp  allogger.hpp  alsettings.cpp  alsettings.hpp
al_ws_client/: .clang_complete  CMakeLists.txt
al_ws_client/src/: alconnclient.cpp  alconnclient.hpp  alwsclient.cpp  alwsclient.hpp  alwsplugin.cpp  alwsplugin.hpp  main.cpp
altexosdk/: .clang_complete  BUILD.gn  BUILD_GN_SECTION.txt  README.md  sdk-build-patch.patch
altexosdk/src/: alcallback.h  almanager.cpp  almanager.h  alsdkplugin.cpp  alsdkplugin.hpp  altesting.cpp  altesting.hpp  alvideocapturer.cpp  alvideocapturer.h  alvideorenderer.cpp  alvideorenderer.h  alwebrtcfactory.cc  customsocketserver.h  main.cc
altexosdk/src/conductor/: aldatamanager.cpp  aldatamanager.h  conductor.cc  conductor.h  defaults.cc  defaults.h
recorder-test/: CMakeLists.txt
recorder-test/src/: main.c
(+184 files in other folders)
