import("../webrtc.gni")

group("al1") {
  # This target shall build all targets in examples.
  testonly = true
  public_deps = []

  if (is_linux || is_win) {
    public_deps += [
      ":al",
    ]
  }
}

if (is_linux || is_win) {
  config("peerconnection_client_warnings_config") {
    cflags = []
    if (is_win && is_clang) {
      cflags += [
        # Disable warnings failing when compiling with Clang on Windows.
        # https://bugs.chromium.org/p/webrtc/issues/detail?id=5366
        "-Wno-format",

        # See https://bugs.chromium.org/p/webrtc/issues/detail?id=6271
        # for -Wno-reorder and -Wno-sign-compare
        "-Wno-reorder",
        "-Wno-sign-compare",
      ]
    }
    if (is_linux && target_cpu == "x86") {
      cflags += [
        # Needed to compile on Linux 32-bit.
        "-Wno-sentinel",
      ]
    }

    if (is_clang) {
      # TODO(ehmaldonado): Make peerconnection_client compile with the standard
      # set of warnings.
      # See https://bugs.chromium.org/p/webrtc/issues/detail?id=6306
      cflags += [ "-Wno-inconsistent-missing-override" ]
    }
  }

  # rtc_shared_library("altexosdk") {
  rtc_executable("al") {
  # rtc_static_library("altexosdk") {
  #  testonly = true
    sources = [
        "src/main.cpp",
    ]

    if (!build_with_chromium && is_clang) {
      # Suppress warnings from the Chromium Clang plugin (bugs.webrtc.org/163).
      suppressed_configs += [ "//build/config/clang:find_bad_constructs" ]
    }
    deps = [
      "../api:libjingle_peerconnection_api",
      "../api:video_frame_api_i420",
      "../rtc_base:checks",
      "../rtc_base:stringutils",
    ]
    if (is_win) {
      sources += [
      ]
      cflags = [ "/wd4245" ]
      configs += [ "//build/config/win:windowed" ]
      deps += [ "../media:rtc_media_base" ]
    }
    if (is_linux) {
      sources += []
      cflags = [ "-Wno-deprecated-declarations" ]
      libs = [
        "X11",
        "Xcomposite",
        "Xext",
        "Xrender",
      ]
    }
    configs += [ ":peerconnection_client_warnings_config" ]

    deps += [
      # "../api:libjingle_peerconnection_test_api",
      "../api:peerconnection_and_implicit_call_api",
      "../api:video_frame_api",
      "../api/audio_codecs:builtin_audio_decoder_factory",
      "../api/audio_codecs:builtin_audio_encoder_factory",
      "../media:rtc_audio_video",
      "../modules/video_capture:video_capture_module",
      "../pc:libjingle_peerconnection",
      "../rtc_base:rtc_base",
      "../rtc_base:rtc_base_approved",
      "../rtc_base:rtc_json",
      "../system_wrappers:field_trial_default",
      "../system_wrappers:metrics_default",
      "../system_wrappers:runtime_enabled_features_default",
      "//third_party/libyuv",
    ]
  #  if (rtc_build_json) {
  #    deps += [ "//third_party/jsoncpp" ]
  #  }
    if (is_win) {
      include_dirs = [
        "C:/Users/grigo/workspace/altexo/include",
        "C:/Boost/include/boost-1_64"
      ]
    }
    if (is_linux) {
      include_dirs = [
        # "/home/xors/workspace/ALTEXO/altexo/include",
        # "/home/xors/workspace/lib/include",
      #  "/home/xors/workspace/ALTEXO/altexo/al_utils/src",
      #  "/home/xors/workspace/ALTEXO/altexo/vendor/Boost.DLL/include",
      #  "/usr/include"
      ]
    }
  }
}
